Set max width on post show to prevent overstretching content

--- a/app/assets/stylesheets/posts/show.scss
+++ b/app/assets/stylesheets/posts/show.scss
@@ -5,6 +5,7 @@
 #show-post-post {
   border: 1px solid white;
   width: 50%;
+  max-width: 950px;
   margin: auto;
   background-color: black;
 }
